...
                // --- Edit Name
                SizedBox(
                  height: 50,
                  child: Form(
                    key: formKey,
                    child: TextFormField(
                      key: const Key("editWaypointName"),
                      controller: newWaypointName,
                      autofocus: true,
                      validator: (value) {
                        if (value != null) {
                          if (value.trim().isEmpty || value.isEmpty) return "warning_empty".tr();
                        }
...
