...
                    width: 10,
                  ),
                ),

                // --- Menu
                PopupMenuButton<String>(
                    key: const Key("viewWaypoints_moreOptions"),
                    onSelected: (value) {
                      switch (value) {
                        case "library":
                          Navigator.pushNamed(context, "/plans");
                          break;
                        case "save":
...
