...
                    controller: latlngText,
                    autofocus: true,
                    validator: (value) {
                      if (value != null) {
                        if (value.trim().isEmpty) return "Must not be empty";
                        if (!reMatch.hasMatch(value))
                          return "Unrecognized Format";
                      }
                      return null;
                    },
                    decoration: const InputDecoration(
                      hintText: "Lat, Long  (or google-maps url)",
                      border: OutlineInputBorder(),
                    ),
                    style: const TextStyle(fontSize: 20),
                  ),
                ),
                const Divider(
...
