...
            mainAxisSize: MainAxisSize.min,
            children: [
              Padding(
                padding: EdgeInsets.all(12.0),
                child: Icon(Icons.list),
              ),
              Text("Entries")
            ],
          ),
          Row(mainAxisSize: MainAxisSize.min, children: [
            Padding(
              padding: EdgeInsets.all(12.0),
              child: Icon(Icons.insights),
            ),
            Text("Stats")
          ]),
        ]),
      ),
      floatingActionButton: FloatingActionButton(
        onPressed: () {
          editLogFilters(context).then((value) {
...
