...
                      labelWidget: Card(
                        child: Padding(
                          padding: const EdgeInsets.all(8.0),
                          child: Column(
                            mainAxisSize: MainAxisSize.min,
                            children: [
                              Text("ADSB-in"),
                              (Provider.of<ADSB>(context).lastHeartbeat >
                                      DateTime.now().millisecondsSinceEpoch - 1000 * 60)
                                  ? Text.rich(TextSpan(children: [
                                      WidgetSpan(
                                          alignment: PlaceholderAlignment.middle,
                                          child: Icon(
...
