{
    "main_menu": {
        "group": "Group",
        "checklist": "Checklist",
        "weather": "Weather",
        "log": "Log",
        "settings": "Settings",
        "devices": "Devices",
        "about": "About"
    },
    "audio_cue": {
        "Off": "Off",
...
